WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
175434
WebRTC MediaStream created without tracks does not update active state after tracks are added
https://bugs.webkit.org/show_bug.cgi?id=175434
Summary
WebRTC MediaStream created without tracks does not update active state after ...
brian
Reported
2017-08-10 11:15:12 PDT
Created
attachment 317827
[details]
javascript test to illustrate the bug Summary: When a new MediaStream is created manually, its "active" field is set to false (which is correct). However, after adding an active track to the stream, its "active" field is not updated, and remains false. It should update to reflect the state of its tracks. Steps to Reproduce: 1) Create a MediaStream with a video track via getUserMedia ("ms1") 2) Create a new MediaStream manually (via something like "var ms2 = new MediaStream()" 3) Do: ms2.addTrack(ms1.getVideoTracks()[0]); Expected Results: ms2 should be active ("active: true") Observed Results: ms2 isn't active ("active: false") Version: Release 35 (Safari 11.0, WebKit 12604.1.29) Notes: Attached a simple example html file that reproduces the issue Configuration: This is running on a macbook, running Sierra 10.12.5 (16F73)
Attachments
javascript test to illustrate the bug
(1.24 KB, text/html)
2017-08-10 11:15 PDT
,
brian
no flags
Details
Patch
(12.76 KB, patch)
2017-08-28 13:52 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2017-08-10 11:42:04 PDT
rdar://problem/33358476
youenn fablet
Comment 2
2017-08-10 11:42:58 PDT
Thanks for filing this bug. So you only rely on the active attribute, not on any event that would be sent if the active attribute value is changing, right?
brian
Comment 3
2017-08-10 11:44:45 PDT
i don't think we rely on any event, what i was running into was tests on the 'active' member failing, so that would at least let me get past where i was stuck.
brian
Comment 4
2017-08-28 10:26:25 PDT
hey youenn, any idea when this will be fixed in tech preview?
youenn fablet
Comment 5
2017-08-28 13:52:32 PDT
Created
attachment 319204
[details]
Patch
Eric Carlson
Comment 6
2017-08-28 14:50:17 PDT
Comment on
attachment 319204
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=319204&action=review
> LayoutTests/fast/mediacapturefromelement/CanvasCaptureMediaStream-clone-track-expected.txt:2 > +FAIL check clone track after captureStream() cloned_track.requestFrame is not a function. (In 'cloned_track.requestFrame()', 'cloned_track.requestFrame' is undefined)
This seems wrong.
youenn fablet
Comment 7
2017-08-28 15:08:49 PDT
(In reply to Eric Carlson from
comment #6
)
> Comment on
attachment 319204
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=319204&action=review
> > > LayoutTests/fast/mediacapturefromelement/CanvasCaptureMediaStream-clone-track-expected.txt:2 > > +FAIL check clone track after captureStream() cloned_track.requestFrame is not a function. (In 'cloned_track.requestFrame()', 'cloned_track.requestFrame' is undefined) > > This seems wrong.
I filed
https://bugs.webkit.org/show_bug.cgi?id=176036
WebKit Commit Bot
Comment 8
2017-08-28 15:38:17 PDT
Comment on
attachment 319204
[details]
Patch Clearing flags on attachment: 319204 Committed
r221277
: <
http://trac.webkit.org/changeset/221277
>
WebKit Commit Bot
Comment 9
2017-08-28 15:38:18 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug