WebRTC MediaStream created without tracks does not update active state after tracks are added https://bugs.webkit.org/show_bug.cgi?id=175434

Patch by Youenn Fablet <youenn@apple.com> on 2017-08-28
Reviewed by Eric Carlson.

Source/WebCore:

Covered by updated test.

Removing active/inactive events.
active attribute is still kept and is updated synchronously on every track change.

* Modules/mediastream/MediaStream.cpp:
(WebCore::MediaStream::MediaStream):
(WebCore::MediaStream::activeStatusChanged):
(WebCore::MediaStream::internalAddTrack):
(WebCore::MediaStream::updateActiveState):
(WebCore::MediaStream::hasPendingActivity const):
(WebCore::MediaStream::scheduleActiveStateChange): Deleted.
(WebCore::MediaStream::activityEventTimerFired): Deleted.
* Modules/mediastream/MediaStream.h:
* Modules/mediastream/MediaStream.idl:

LayoutTests:

* fast/mediacapturefromelement/CanvasCaptureMediaStream-clone-track-expected.txt:
* fast/mediacapturefromelement/CanvasCaptureMediaStream-creation-expected.txt:
* fast/mediastream/MediaStream-add-remove-tracks-expected.txt:
* fast/mediastream/MediaStream-add-remove-tracks.html:

Canonical link: https://commits.webkit.org/192707@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221277 268f45cc-cd09-0410-ab3c-d52691b4dbfc